src/ui/snapshots/gprr__ui__diff__tests__renders_diff_view_side_by_side_mode.snap
---
source: src/ui/diff.rs
assertion_line: 861
expression: terminal.backend()
---
"diff --git a/x.rs b/x.rs                                    "
"index 1111111..2222222 100644                               "
"--- a/x.rs                                                  "
"+++ b/x.rs                                                  "
"@@ -1,3 +1,3 @@                                             "
" ctx                            ctx                         "
"-old                           +new                         "
"                                                            "
