src/ui/snapshots/gprr__ui__diff__tests__renders_small_rust_diff.snap
---
source: src/ui/diff.rs
expression: terminal.backend()
---
"diff --git a/src/lib.rs b/src/lib.rs                        "
"index 1111111..2222222 100644                               "
"--- a/src/lib.rs                                            "
"+++ b/src/lib.rs                                            "
"@@ -1,3 +1,4 @@                                             "
" fn main() {                                                "
"     let x = 1;                                             "
"+    let y = 2;                                             "
" }                                                          "
"                                                            "
